--- a/senac-eventos-app/package.json
+++ b/senac-eventos-app/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-multi-select-component": "^4.3.4",
     "react-router-dom": "^7.1.1",
     "senac-eventos-app": "file:"
   },
