--- a/nrfdetails/package.json
+++ b/nrfdetails/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "senac-eventos-app",
+  "name": "nrfdetails",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,24 +10,23 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "next": "15.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "15.1.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-multi-select-component": "^4.3.4",
-    "react-router-dom": "^7.1.1",
-    "senac-eventos-app": "file:"
+    "react-modal": "^3.16.3",
+    "react-multi-select-component": "^4.3.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-icons": "^2.2.7",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^9",
-    "eslint-config-next": "15.1.3",
+    "eslint-config-next": "15.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
