--- a/senac-eventos-app/package.json
+++ b/senac-eventos-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "senac-eventos-app",
+  "name": "nrfdetails",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,28 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mui/icons-material": "^6.3.1",
-    "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
-    "framer-motion": "^11.16.0",
-    "next": "15.1.3",
+    "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
-    "react-multi-select-component": "^4.3.4",
-    "react-router-dom": "^7.1.1",
-    "senac-eventos-app": "file:"
+    "react-multi-select-component": "^4.3.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-icons": "^2.2.7",
     "@types/react-modal": "^3.16.3",
     "eslint": "^9",
-    "eslint-config-next": "15.1.3",
+    "eslint-config-next": "15.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
