--- a/senac-eventos-app/package.json
+++ b/senac-eventos-app/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "react-multi-select-component": "^4.3.4",
+    "sweetalert2": "^11.15.10",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
