--- a/senac-eventos-app/package.json
+++ b/senac-eventos-app/package.json
@@ -21,6 +21,7 @@
     "@types/material-ui": "^0.21.18",
     "axios": "^1.7.9",
     "next": "15.1.4",
+    "nrfdetails": "file:",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.4.0",
